# secure-zellij

./: .editorconfig  .env.example  .gitignore  .tool-versions  Makefile  README.md  RUNBOOK.md  compose.yaml  justfile  logrotate.conf
.github/workflows/: ci.yml
alerter/: Dockerfile  alerter.py  pyproject.toml
alerter/tests/: test_alerter.py
docs/: README.md  alerting.md  fail2ban.md  integrations.md  ip-allowlist.md  log-rotation.md  multi-domain.md  systemd.md  tls.md
fail2ban/filter.d/: traefik-zellij.conf
fail2ban/jail.d/: traefik-zellij.conf
traefik/: entrypoint.sh  traefik.yml
traefik/dynamic/: middlewares.yml  routers.yml  tls.yml
