[project]
name = "zellij-alerter"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
